# shell-task

./: .bandit  .env.example  .gitignore  CLAUDE.md  README.md  SECURITY.md  dependency-check-suppressions.xml  docker-compose.yml  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  sonar-project.properties
.github/workflows/: ci.yml  release.yml  security.yml
app/models/: response.py
app/services/: binance_service.py  fx_service.py
app/utils/: cache.py
currency-converter-env/: pyvenv.cfg
helm/currency-converter/: Chart.yaml  README.md  values-development.yaml  values-production.yaml  values.yaml
helm/currency-converter/templates/: NOTES.txt  configmap.yaml  deployment.yaml  ingress.yaml  service.yaml
scripts/: validate-helm.sh
security-policies/: dockerfile.rego  kubernetes.rego
tests/: test_api.py  test_api.py.disabled  test_binance_service.py  test_cache.py  test_fx_service.py  test_models.py
